fixed: 1. 个人密码修改时，新设置的密码和原密码一样，系统允许保存 如果用户设置新密码和原密码一样，系统应该提示“新密码不能和原密码一样”
2.
修改个人密码成功，系统没有提示消息，又返回密码修改界面，会让用户误解没有修改成功。
系统应该提示信息“密码已修改成功”

--- a/config/database.yml
+++ b/config/database.yml
@@ -51,8 +51,8 @@ macdev:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: irm_prod
+  database: irm_dev
   pool: 5
   username: root
   password: root
-  host: 172.20.0.12
+  host: localhost
