--- a/config/database.yml
+++ b/config/database.yml
@@ -41,7 +41,7 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: irm_prod
+  database: irm_dev
   pool: 5
   username: root
   password: root
